Add OAuth callback endpoint and API route config

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,11 @@
     { "source": "/terms", "destination": "/terms.html" },
     { "source": "/privacy", "destination": "/privacy.html" }
   ],
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "edge"
+    }
+  },
   "headers": [
     {
       "source": "/(.*)",
